@@ -7,6 +7,7 @@ import com.axonivy.market.entity.MavenArtifactVersion;
 import com.axonivy.market.entity.Metadata;
 import com.axonivy.market.entity.ProductJsonContent;
 import com.axonivy.market.enums.DevelopmentVersion;
+import com.axonivy.market.exceptions.model.NotFoundException;
 import com.axonivy.market.model.MavenArtifactVersionModel;
 import com.axonivy.market.model.VersionAndUrlModel;
 import com.axonivy.market.repository.MavenArtifactVersionRepository;
@@ -16,7 +17,6 @@ import com.axonivy.market.service.ProductMarketplaceDataService;
 import com.axonivy.market.util.MavenUtils;
 import com.axonivy.market.util.VersionUtils;
 import org.apache.commons.lang3.ObjectUtils;
-import org.apache.commons.lang3.StringUtils;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -113,7 +113,7 @@ class VersionServiceImplTest extends BaseSetup {
   @Test
   void testFindArchivedArtifactInfoBestMatchWithVersion() {
     ArchivedArtifact result = MavenUtils.findArchivedArtifactInfoBestMatchWithVersion(MOCK_RELEASED_VERSION,
-        Collections.EMPTY_SET);
+        Collections.<ArchivedArtifact>emptySet());
     Assertions.assertNull(result, "Archived artifact info best match with version should be null if archive artifact " +
         "set is empty");
     ArchivedArtifact adobeArchivedArtifactVersion8 = new ArchivedArtifact("10.0.8", MOCK_GROUP_ID,
@@ -208,48 +208,38 @@ class VersionServiceImplTest extends BaseSetup {
   }
 
   @Test
-  void testGetDownloadUrlFromExistingDataByArtifactIdAndVersion() {
-    List<MavenArtifactVersion> existingData = getMockMavenArtifactVersion();
-
-    existingData.add(getMockMavenArtifactVersionWithDownloadUrl());
-    Assertions.assertNull(versionService.getDownloadUrlFromExistingDataByArtifactIdAndVersion(existingData,
-            MOCK_SNAPSHOT_VERSION, List.of(MOCK_ARTIFACT_ID)),
-        "Download URL should be null");
-
-    MavenArtifactVersion mockMavenArtifactVersion = getMockMavenArtifactVersionWithDownloadUrl();
-    mockMavenArtifactVersion.getId().setProductVersion(MOCK_RELEASED_VERSION);
-
-    existingData.clear();
-    existingData.add(mockMavenArtifactVersion);
-    Assertions.assertEquals(MOCK_DOWNLOAD_URL, versionService.getDownloadUrlFromExistingDataByArtifactIdAndVersion(
-            existingData, MOCK_RELEASED_VERSION, List.of(MOCK_ARTIFACT_ID)),
-        "Download URL should match mock download URL");
-  }
-
-  @Test
   void testGetLatestVersionArtifactDownloadUrl() {
-    when(metadataRepo.findByProductIdAndArtifactId(MOCK_PRODUCT_ID, MOCK_ARTIFACT_ID)).thenReturn(
-        List.of(getMockMetadataWithVersions()));
-    Assertions.assertEquals(StringUtils.EMPTY, versionService.getLatestVersionArtifactDownloadUrl(MOCK_PRODUCT_ID,
-            DevelopmentVersion.LATEST.getCode(), MOCK_ARTIFACT_DOWNLOAD_FILE),
-        "Latest version artifact download URL should be empty");
+    when(metadataRepo.findByProductIdAndArtifactId(MOCK_PRODUCT_ID, MOCK_ARTIFACT_ID))
+        .thenReturn(List.of(getMockMetadataWithVersions()));
+    when(mavenArtifactVersionRepository.findByProductId(MOCK_PRODUCT_ID)).thenReturn(Collections.emptyList());
+
+    String productId = MOCK_PRODUCT_ID;
+    String versionCode = DevelopmentVersion.LATEST.getCode();
+    String downloadFile = MOCK_ARTIFACT_DOWNLOAD_FILE;
+
+    Assertions.assertThrows(NotFoundException.class,
+        () -> versionService.getLatestVersionArtifactDownloadUrl(productId, versionCode, downloadFile),
+        "Should throw NotFoundException when no artifacts found"
+    );
 
     List<MavenArtifactVersion> mockMavenArtifactVersion = getMockMavenArtifactVersion();
-    List<MavenArtifactVersion> mockMavenArtifactVersion2 = getMockMavenArtifactVersion();
+    when(mavenArtifactVersionRepository.findByProductId(MOCK_PRODUCT_ID)).thenReturn(mockMavenArtifactVersion);
 
+    Assertions.assertThrows(NotFoundException.class,
+        () -> versionService.getLatestVersionArtifactDownloadUrl(productId, versionCode, downloadFile),
+        "Should throw NotFoundException when download URL not found"
+    );
+
+    List<MavenArtifactVersion> mockMavenArtifactVersion2 = getMockMavenArtifactVersion();
     MavenArtifactVersion mockMavenArtifactVersionWithDownloadUrl = getMockMavenArtifactVersionWithDownloadUrl();
     mockMavenArtifactVersionWithDownloadUrl.getId().setProductVersion("10.0.10");
     mockMavenArtifactVersion2.add(mockMavenArtifactVersionWithDownloadUrl);
+    when(mavenArtifactVersionRepository.findByProductId(MOCK_PRODUCT_ID)).thenReturn(mockMavenArtifactVersion2);
 
-    when(mavenArtifactVersionRepository.findByProductId(anyString())).thenReturn(mockMavenArtifactVersion,
-        mockMavenArtifactVersion2);
+    String actualUrl = versionService.getLatestVersionArtifactDownloadUrl(
+        MOCK_PRODUCT_ID, DevelopmentVersion.LATEST.getCode(), MOCK_ARTIFACT_DOWNLOAD_FILE);
 
-    Assertions.assertEquals(StringUtils.EMPTY, versionService.getLatestVersionArtifactDownloadUrl(MOCK_PRODUCT_ID,
-            DevelopmentVersion.LATEST.getCode(), MOCK_ARTIFACT_DOWNLOAD_FILE),
-        "Latest version artifact download URL should be empty");
-
-    Assertions.assertEquals(MOCK_DOWNLOAD_URL, versionService.getLatestVersionArtifactDownloadUrl(MOCK_PRODUCT_ID,
-            DevelopmentVersion.LATEST.getCode(), MOCK_ARTIFACT_DOWNLOAD_FILE),
+    Assertions.assertEquals(MOCK_DOWNLOAD_URL, actualUrl,
         "Latest version artifact download URL should match mock download URL");
   }
 }
